--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3555,9 +3555,51 @@ div.no-project > span.disable-border-button {
 }
 
 .box .box-body .project-techniques {
-    margin-bottom: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
+    /*margin-bottom: 10px;*/
+    /*margin-right: 10px;*/
+    /*margin-left: 10px;*/
+    height: 50px;
+    overflow: hidden;
+}
+
+.box .box-body .project-techniques ul {
+    list-style: none;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+}
+
+.box .box-body .project-techniques div {
+    width: fit-content;
+    width: -moz-fit-content;
+}
+
+.box .box-body .project-techniques span {
+    display: inline-block;
+    background-color: #f7fdf8;
+    color: #484848;
+    padding: 2px 5px;
+    margin-bottom: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+.box .box-body .project-techniques span.show-all {
+    display: inline-block;
+    background-color: transparent;
+    color: #3CCD1C;
+    padding: 2px 5px;
+    margin-bottom: 5px;
+    border-bottom: 2px dashed #3CCD1C;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
+
+.box .box-body .project-techniques span.show-all:hover {
+    cursor: pointer;
 }
 
 @media (min-width: 992px) {
@@ -4734,4 +4776,9 @@ img.center-head {
 
 .modal-resume .technique-item .grade__B:before {
     background-color: #3ccd1c;
+}
+
+.section-button {
+    display: block;
+    margin: -30px auto 5px 0;
 }
