--- a/static/expert/css/style.css
+++ b/static/expert/css/style.css
@@ -1447,7 +1447,7 @@ span.add-researcher.hover > span {
     border-radius: 50%;
     border: 1px solid #3CCD1C;
     background-color: #ffffff;
-    z-index: 9999;
+    z-index: 2;
 }
 
 @media (max-width: 992px) {
@@ -2452,13 +2452,103 @@ ul.nav-tabs {
 }
 
 .horizontal-avatar-list .avatar-item {
-    margin-left: 5px;
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin-left: 10px;
+    margin-top: 5px;
+    -webkit-transition: 0.4s ease-out;
+    transition: 0.4s ease-out;
 }
 
 .horizontal-avatar-list .avatar-item:hover {
 
 }
 
+.horizontal-avatar-list .avatar-item:hover:before {
+    opacity: 1;
+}
+
+.horizontal-avatar-list .avatar-item:hover {
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+}
+
+.horizontal-avatar-list .avatar-item:hover .info {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+}
+
+.horizontal-avatar-list .avatar-item:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 2;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    opacity: 0;
+}
+
+.horizontal-avatar-list .avatar-item:hover .info {
+    opacity: 1;
+    -webkit-transform: translateY(55%);
+    transform: translateY(55%);
+}
+
 .horizontal-avatar-list .avatar-item img {
-    width: 160px;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 15px;
+}
+
+.horizontal-avatar-list .avatar-item .info {
+    position: relative;
+    z-index: 3;
+    color: white;
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    text-align: center;
+}
+
+.horizontal-avatar-list .avatar-item .info h3 {
+    margin: 0 0 10px 0;
+}
+
+.horizontal-avatar-list .avatar-item .info p {
+    letter-spacing: 1px;
+    font-size: 15px;
+    margin-top: 8px;
+}
+
+.horizontal-avatar-list .avatar-item .info button {
+    padding: 0.6rem;
+    outline: none;
+    border: none;
+    border-radius: 3px;
+    background: white;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+    -webkit-transition: 0.4s ease;
+    transition: 0.4s ease;
+}
+
+.horizontal-avatar-list .avatar-item .info button:hover {
+    background: #3CCD1C;
+    color: white;
 }
